# car

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/car/: __main__.py  cli.py  copilot.py  harness.py  openrouter.py  paths.py  state.py  tui.py
tests/: test_cli.py  test_copilot.py  test_harness.py  test_init_main.py  test_mattstash_integration.py  test_openrouter.py  test_paths.py  test_state.py  test_tui.py
