[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car"
version = "0.1.0"
description = "Copilot + OpenRouter wrapper with CLI and TUI model selection"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Matthew Kingsbury" }]
dependencies = [
  "rich>=13.7.0",
  "textual>=0.79.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
car = "car.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=car --cov-report=term-missing --cov-fail-under=100"
markers = [
  "integration: tests that exercise subprocess-based integration paths",
]

[tool.coverage.run]
branch = true
source = ["car"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
